[workspace]
resolver = "2"
default-members = ["varnish"]
members = ["varnish", "varnish-macros", "varnish-sys", "vmod_test", "examples/vmod_*"]

[workspace.package]
# These fields are used by multiple crates, so it's defined here.
# Version must also be updated in the `varnish-macros` dependency below.
version = "0.1.0"
repository = "https://github.com/gquintard/varnish-rs"
edition = "2021"
license = "BSD-3-Clause"

[workspace.dependencies]
# These versions must match the one in the [workspace.package] section above
varnish = { path = "./varnish", version = "0.1.0" }
varnish-macros = { path = "./varnish-macros", version = "0.1.0" }
varnish-sys = { path = "./varnish-sys", version = "0.1.0" }
#
# These dependencies are used by one or more crates, and easier to maintain in one place.
bindgen = "0.70.1"
darling = "0.20.10"
glob = "0.3.1"
insta = "1"
pkg-config = "0.3.30"
prettyplease = "0.2.22"
proc-macro2 = "1.0.86"
quote = "1.0.37"
regex = "1.10.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
syn = "2.0.77"
trybuild = "1.0"

[profile.dev.package]
# Optimize build speed -- https://docs.rs/insta/latest/insta/#optional-faster-runs
insta.opt-level = 3
similar.opt-level = 3

[workspace.lints.rust]
unused_qualifications = "warn"

[workspace.lints.clippy]
# regular warnings - these should probably be fixed first
missing_safety_doc = "allow"
new_without_default = "allow"
len_without_is_empty = "allow"
not_unsafe_ptr_arg_deref = "allow"  # this one seems pretty bad
result_unit_err = "allow"

# Pedantic lints - these are more subjective, and some might stay disabled permanently
pedantic = { level = "warn", priority = -1 }
bool_to_int_with_if = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_ptr_alignment = "allow"  # this one is really suspicious
cast_sign_loss = "allow"
checked_conversions = "allow"
derive_partial_eq_without_eq = "allow"
doc_markdown = "allow"
implicit_hasher = "allow"
into_iter_without_iter = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
ptr_as_ptr = "allow"
ptr_cast_constness = "allow"
redundant_closure_for_method_calls = "allow"
ref_as_ptr = "allow"
similar_names = "allow"
struct_field_names = "allow"
wildcard_imports = "allow"
