[workspace]
resolver = "2"
default-members = ["varnish", "varnish-macros", "varnish-sys"]
members = ["varnish", "varnish-macros", "varnish-sys", "varnish/tests/vmod_test", "examples/vmod_*"]

[workspace.package]
# These fields are used by multiple crates, so it's defined here.
# Version must also be updated in the `varnish-macros` dependency below.
#
#
# ! STOP !  Update the version in dependencies below!!!
version = "0.4.0"  ## <<<----- ! STOP !!!
# ! STOP !  Update the version in dependencies below!!!
#
#
repository = "https://github.com/gquintard/varnish-rs"
edition = "2021"
rust-version = "1.82.0"
license = "BSD-3-Clause"
description = "A Rust framework for creating Varnish Caching Proxy extensions"
keywords = ["varnish", "vmod", "cache", "http", "reverse-proxy"]
categories = ["api-bindings"]
readme = "README.md"

[workspace.dependencies]
# These versions must match the one in the [workspace.package] section above
varnish = { path = "./varnish", version = "0.4.0" }
varnish-macros = { path = "./varnish-macros", version = "0.4.0" }
varnish-sys = { path = "./varnish-sys", version = "0.4.0" }
#
# These dependencies are used by one or more crates, and easier to maintain in one place.
bindgen_helpers = "0.3.0"
darling = "0.20.10"
glob = "0.3.1"
insta = "1"
memchr = "2.7.4"
pkg-config = "0.3.30"
prettyplease = "0.2.22"
proc-macro2 = "1.0.86"
quote = "1.0.37"
regex = "1.10.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
syn = "2.0.77"
thiserror = "2.0.3"
trybuild = "1.0"

[profile.dev.package]
# Optimize build speed -- https://docs.rs/insta/latest/insta/#optional-faster-runs
insta.opt-level = 3
similar.opt-level = 3

[workspace.lints.rust]
unused_qualifications = "warn"

[workspace.lints.clippy]
# FIXME: safety doc lints are disabled for now, but should be enabled eventually
missing_safety_doc = "allow"

# Pedantic lints - these are more subjective, and some might stay disabled permanently
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
manual_range_contains = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
