[package]
name = "varnish-macros"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>", "Guillaume Quintard <guillaume.quintard@gmail.com>"]
description.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
syn.workspace = true
varnish-sys.workspace = true

[dev-dependencies]
glob.workspace = true
insta.workspace = true
regex.workspace = true

[lints]
workspace = true
