[package]
name = "varnish-sys"
authors = ["Guillaume Quintard <guillaume.quintard@gmail.com>", "Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
links = "varnishapi"
description.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true

[lib]
name = "varnish_sys"

[package.metadata.libvarnishapi]
version = "7.6"

[build-dependencies]
bindgen.workspace = true
bindgen_helpers.workspace = true
pkg-config.workspace = true

[dependencies]
memchr.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
