[package]
name = "varnish"
authors = ["Guillaume Quintard <guillaume.quintard@gmail.com>", "Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
description = "Access to the Varnish modules API"
keywords = ["varnish", "vmod", "cache", "http", "reverse-proxy"]
categories = ["api-bindings"]
readme = "../README.md"
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
glob.workspace = true
varnish-macros.workspace = true
varnish-sys.workspace = true

[dev-dependencies]
trybuild.workspace = true

[lints]
workspace = true

[features]
default = []
ffi = []
vsc = []
