[package]
name = "varnish"
authors = ["Guillaume Quintard <guillaume.quintard@gmail.com>", "Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
description.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true

[features]
default = []
http0 = ["varnish-sys/http0"]
http1 = ["varnish-sys/http1"]
ffi = []
vsc = []

[dependencies]
glob.workspace = true
varnish-macros.workspace = true
varnish-sys.workspace = true

[dev-dependencies]
trybuild.workspace = true

[lints]
workspace = true
